--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,20 +9,26 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
-      - "5433:5432"  # Porta host 5433 mapeada para 5432 do container
+      - "5433:5432" 
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   app:
     build: .
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/socialdb?schema=public
-      - PORT=8000
+      DATABASE_URL: "postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-socialdb}?schema=public"
     ports:
       - "8000:8000"
     volumes:
-      - ./:/app   # Para live reload do código, se quiser
-    command: ["npx", "tsx", "src/server.ts"]
-
+    - ./src:/app/src 
+    # Remova o volume se não for estritamente necessário
+    command: ["sh", "-c", "npx prisma generate && npm run start:dev"]
+    
 volumes:
   postgres_data:
